# axum-diesel-example

./: .env  README.md
crates/db/: Cargo.toml
crates/db/migrations/2024-05-06-042725_todos/: up.sql
crates/db/src/: lib.rs  models.rs  schema.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: config.rs  error.rs  main.rs
