[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio ={ version = "1.37.0", features = ["full"] }
axum = "0.7.5"
db = { path = "../db" }
axum-error = "0.2.0"
tower-http = { version = "0.5.2", features = ["cors"] }